fix: menu item outside screen on mobile devices

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,7 @@
   left: 0;
   right: 0;
   top: 0;
+  max-height: 100vh;
   background-color: var(--rgbBackground);
   z-index: var(--zIndex5);
 
